# Dual

./: .gitignore  LICENSE  README.md  dual.cabal
.github/workflows/: haskell.yml
.obsidian/: workspace.json
src/: Dual.hs
src/Data/: Dual.hs
