cabal-version:      3.0
name:               dual
version:            0.1.0.0
synopsis: A Haskell package for dual numbers.
description: Check Github for description.
license:            MIT
license-file:       LICENSE
author:             Bravery Aung (Sixteen)
maintainer:         onehundredtwentyeight@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Dual
    -- other-modules:
    default-extensions: BlockArguments
    build-depends:    base >= 4.7 && <= 4.21, lens >= 5 && <= 5.3.5, transformers
    hs-source-dirs:   src
    default-language: GHC2021

test-suite dual-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        dual
